@@ -297,19 +297,19 @@ class Tx_Buechertransport_Controller_ProvinceController extends Tx_Extbase_MVC_C
 		$addresses = array();
 		$datamap = array();
 		$nkwlib = new tx_nkwlib();
-		// t3lib_div::devLog('Geocode-Task: Successful nkwlib instantiation' , 'buechertransport', -1);
+		t3lib_div::devLog('Geocode-Task: Successful nkwlib instantiation' , 'buechertransport', -1);
 
 		// Get all entries with empty geocodecache-field
 		$rows = $GLOBALS['TYPO3_DB']->exec_SELECTgetRows(
 			"uid, name",
 			"tx_buechertransport_domain_model_city",
-			"geocode = '' AND lat = '' AND lng = '' " . t3lib_Befunc::BEenableFields('tx_buechertransport_domain_model_city') . t3lib_Befunc::deleteClause('tx_buechertransport_domain_model_city'), "", "uid ASC", ""
+			"geocode = '' OR lat = '' OR lng = '' " . t3lib_Befunc::BEenableFields('tx_buechertransport_domain_model_city') . t3lib_Befunc::deleteClause('tx_buechertransport_domain_model_city'), "", "uid ASC", ""
 		);
 
 		$tce = t3lib_div::makeInstance('t3lib_TCEmain');
-		// t3lib_div::devLog('Geocode-Task: Successful TCE instantiation' , 'buechertransport', -1);
+		t3lib_div::devLog('Geocode-Task: Successful TCE instantiation' , 'buechertransport', -1);
 		t3lib_div::loadTCA('buechertransport');
-		// t3lib_div::devLog('Geocode-Task: Loaded Successful TCA' , 'buechertransport', -1);
+		t3lib_div::devLog('Geocode-Task: Loaded Successful TCA' , 'buechertransport', -1);
 
 		if (!empty($rows)) {
 			foreach ($rows as $row) {
@@ -329,7 +329,7 @@ class Tx_Buechertransport_Controller_ProvinceController extends Tx_Extbase_MVC_C
 						$datamap['tx_buechertransport_domain_model_city'][$row['uid']] = array(
 							'geocode' => '', 'lat' => '', 'lng' => ''
 						);
-						// t3lib_div::devLog('Geocode-Task: ' . $row['name'] . 'could not be geocoded.' , 'buechertransport', 3);
+						t3lib_div::devLog('Geocode-Task: ' . $row['name'] . 'could not be geocoded.' , 'buechertransport', 3);
 					}
 				// Already geocoded
 				}	else	{
@@ -341,12 +341,13 @@ class Tx_Buechertransport_Controller_ProvinceController extends Tx_Extbase_MVC_C
 					$success = TRUE;
 				}
 			}
-			// t3lib_div::devLog('Geocode-Task: All geocodes retrieved.' , 'buechertransport', -1);
+			t3lib_div::devLog('Geocode-Task: All geocodes retrieved.' , 'buechertransport', -1);
 
+			// Insert transmit datamap into database 
 			$tce->stripslashes_values = 0;
 			$tce->start($datamap, array());
 			$tce->process_datamap();
-			// t3lib_div::devLog('Geocode-Task: Datamap process -> Database update successful.' , 'buechertransport', -1);
+			t3lib_div::devLog('Geocode-Task: Datamap process -> Database update successful.' , 'buechertransport', -1);
 			
 			if(count($tce->errorLog) != 0)	{
 				$nkwlib->dprint($tce->errorLog);	
