@@ -46,14 +46,15 @@ overwriteSettings:
 
   Configuration:
     #TCA: merge
-    #TypoScript: keep
+    TypoScript: keep
 
   Resources:
     Private:
       Language:
-        #locallang.xml: merge
+        locallang.xml: merge
         #locallang.xlf: merge
-      #Templates: keep
+      # Partials: keep
+      Templates: keep
 
   ext_icon.gif: keep
 
