@@ -1,1 +1,1 @@
-{"modules":[{"config":{"position":[45,63]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":true,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"Province","objectsettings":{"aggregateRoot":true,"description":"The Province","mapToTable":"","parentClass":"","type":"Entity","uid":"1269333433208"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the Province","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"808446505135"},{"propertyDescription":"Description of the Province","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"description","propertyType":"RichText","uid":"760938146573"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Cities","relationName":"cities","relationType":"zeroToMany","relationWire":"[wired]","uid":"315428299235"},{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Cities","relationName":"reachables","relationType":"manyToMany","relationWire":"[wired]","uid":"1348373071077"}]}}},{"config":{"position":[648,81]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":false,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"City","objectsettings":{"aggregateRoot":true,"description":"The City of the libraries","mapToTable":"","parentClass":"","type":"Entity","uid":"296747646436"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the City","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"824805121985"},{"propertyDescription":"Geocode of the City","propertyIsExcludeField":false,"propertyIsRequired":false,"propertyName":"geocode","propertyType":"String","uid":"454691755326"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Libraries","relationName":"libraries","relationType":"zeroToMany","relationWire":"[wired]","uid":"757768254623"}]}}},{"config":{"position":[320,349]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":false,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"Library","objectsettings":{"aggregateRoot":true,"description":"The Library","mapToTable":"","parentClass":"","type":"Entity","uid":"613658156408"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the Library","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"898083298481"},{"propertyDescription":"Sigel of the Library","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"sigel","propertyType":"String","uid":"443225734570"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"The related DistributionCentre (City)","relationName":"distributioncentre","relationType":"zeroToOne","relationWire":"[wired]","uid":"790758663052"}]}}}],"properties":{"backendModules":[],"description":"","emConf":{"category":"plugin","custom_category":"","dependsOn":"extbase => 1.3\nfluid => 1.3\ntypo3 => 4.5\n","disableVersioning":false,"priority":"","shy":false,"state":"alpha","targetVersion":"4.5","version":""},"extensionKey":"buechertransport","name":"B\u00fcchertransportdienst","originalExtensionKey":"buechertransport","persons":[{"company":"SUB G\u00f6ttingen","email":"dominic.simm@sub.uni-goettingen.de","name":"Dominic Simm","role":"Developer"}],"plugins":[{"actions":{"controllerActionCombinations":"Province => list, show","noncacheableActions":"","switchableActions":""},"key":"buechertransport","name":"B\u00fcchertransport"}]},"wires":[{"src":{"moduleId":0,"terminal":"relationWire_0","uid":"315428299235"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}},{"src":{"moduleId":1,"terminal":"relationWire_0","uid":"757768254623"},"tgt":{"moduleId":2,"terminal":"SOURCES","uid":"613658156408"}},{"src":{"moduleId":2,"terminal":"relationWire_0","uid":"790758663052"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}},{"src":{"moduleId":0,"terminal":"relationWire_1","uid":"1348373071077"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}}],"log":{"last_modified":"2012-12-13 07:07","extension_builder_version":"2.3.0","be_user":"Dominic Simm (527)"}}
+{"modules":[{"config":{"position":[45,63]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":true,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"Province","objectsettings":{"aggregateRoot":true,"description":"The Province","mapToTable":"","parentClass":"","type":"Entity","uid":"1269333433208"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the Province","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"808446505135"},{"propertyDescription":"Description of the Province","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"description","propertyType":"RichText","uid":"760938146573"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Cities","relationName":"cities","relationType":"zeroToMany","relationWire":"[wired]","uid":"315428299235"},{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Cities","relationName":"reachables","relationType":"manyToMany","relationWire":"[wired]","uid":"1348373071077"}]}}},{"config":{"position":[648,81]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":false,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"City","objectsettings":{"aggregateRoot":true,"description":"The City of the libraries","mapToTable":"","parentClass":"","type":"Entity","uid":"296747646436"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the City","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"824805121985"},{"propertyDescription":"Geocode of the City","propertyIsExcludeField":false,"propertyIsRequired":false,"propertyName":"geocode","propertyType":"String","uid":"454691755326"},{"propertyDescription":"Latitude of the City","propertyIsExcludeField":false,"propertyIsRequired":false,"propertyName":"lat","propertyType":"String","uid":"880580915693"},{"propertyDescription":"Longitude of the City","propertyIsExcludeField":false,"propertyIsRequired":false,"propertyName":"lng","propertyType":"String","uid":"827048381154"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"Related Libraries","relationName":"libraries","relationType":"zeroToMany","relationWire":"[wired]","uid":"757768254623"}]}}},{"config":{"position":[320,349]},"name":"New Model Object","value":{"actionGroup":{"_default0_list":true,"_default1_show":false,"_default2_new_create":true,"_default3_edit_update":true,"_default4_delete":true,"customActions":[]},"name":"Library","objectsettings":{"aggregateRoot":true,"description":"The Library","mapToTable":"","parentClass":"","type":"Entity","uid":"613658156408"},"propertyGroup":{"properties":[{"propertyDescription":"Name of the Library","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"name","propertyType":"String","uid":"898083298481"},{"propertyDescription":"Sigel of the Library","propertyIsExcludeField":false,"propertyIsRequired":true,"propertyName":"sigel","propertyType":"String","uid":"443225734570"}]},"relationGroup":{"relations":[{"foreignRelationClass":"","lazyLoading":false,"propertyIsExcludeField":false,"relationDescription":"The related DistributionCentre (City)","relationName":"distributioncentre","relationType":"zeroToOne","relationWire":"[wired]","uid":"790758663052"}]}}}],"properties":{"backendModules":[],"description":"","emConf":{"category":"plugin","custom_category":"","dependsOn":"extbase => 1.3\nfluid => 1.3\ntypo3 => 4.5\n","disableVersioning":false,"priority":"","shy":false,"state":"alpha","targetVersion":"4.5","version":""},"extensionKey":"buechertransport","name":"B\u00fcchertransportdienst","originalExtensionKey":"buechertransport","persons":[{"company":"SUB G\u00f6ttingen","email":"dominic.simm@sub.uni-goettingen.de","name":"Dominic Simm","role":"Developer"}],"plugins":[{"actions":{"controllerActionCombinations":"Province => list, show","noncacheableActions":"","switchableActions":""},"key":"buechertransport","name":"B\u00fcchertransport"}]},"wires":[{"src":{"moduleId":0,"terminal":"relationWire_0","uid":"315428299235"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}},{"src":{"moduleId":1,"terminal":"relationWire_0","uid":"757768254623"},"tgt":{"moduleId":2,"terminal":"SOURCES","uid":"613658156408"}},{"src":{"moduleId":2,"terminal":"relationWire_0","uid":"790758663052"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}},{"src":{"moduleId":0,"terminal":"relationWire_1","uid":"1348373071077"},"tgt":{"moduleId":1,"terminal":"SOURCES","uid":"296747646436"}}],"log":{"last_modified":"2012-12-14 01:25","extension_builder_version":"2.3.0","be_user":"Dominic Simm (527)"}}
