@@ -11,18 +11,19 @@
 			<label index="tx_buechertransport_domain_model_province.description">Description of the Province</label>
 			<label index="tx_buechertransport_domain_model_province.cities">Related Cities</label>
 			<label index="tx_buechertransport_domain_model_province.reachables">Reachable Cities</label>
-			<label index="tx_buechertransport_domain_model_province.maps">Transport ways</label>
 			<label index="tx_buechertransport_domain_model_city">The City of the libraries</label>
 			<label index="tx_buechertransport_domain_model_city.name">Name of the City</label>
-			<label index="tx_buechertransport_domain_model_city.libraries">Related Libraries</label>
 			<label index="tx_buechertransport_domain_model_city.geocode">Geocode</label>
+			<label index="tx_buechertransport_domain_model_city.lat">Latitude of the City</label>
+			<label index="tx_buechertransport_domain_model_city.lng">Longitude of the City</label>
+			<label index="tx_buechertransport_domain_model_city.libraries">Related Libraries</label>
 			<label index="tx_buechertransport_domain_model_library">The Library</label>
 			<label index="tx_buechertransport_domain_model_library.name">Name of the Library</label>
 			<label index="tx_buechertransport_domain_model_library.sigel">Abbreviation of the Library</label>
 			<label index="tx_buechertransport_domain_model_library.distributioncentre">The related DistributionCentre (City)</label>
+			<label index="tx_buechertransport_domain_model_province.maps">Transport ways</label>
 			<label index="tx_buechertransport_template_backToList">Back to list</label>
 		</languageKey>
-
 		<languageKey index="de" type="array">
 			<label index="tx_buechertransport_domain_model_province">Die Leihverkehrsregion</label>
 			<label index="tx_buechertransport_domain_model_province.name">Leihverkehrsregion</label>
@@ -40,6 +41,5 @@
 			<label index="tx_buechertransport_domain_model_library.distributioncentre">Verteilerzentrum</label>
 			<label index="tx_buechertransport_template_backToList">Zurück zur Übersicht</label>
 		</languageKey>
-
 	</data>
 </T3locallang>
