@@ -6,3 +6,11 @@
 	<f:translate key="tx_buechertransport_domain_model_city.geocode" />
 </label><br />
 	<f:form.textfield property="geocode" /><br />
+<label for="lat">
+	<f:translate key="tx_buechertransport_domain_model_city.lat" />
+</label><br />
+	<f:form.textfield property="lat" /><br />
+<label for="lng">
+	<f:translate key="tx_buechertransport_domain_model_city.lng" />
+</label><br />
+	<f:form.textfield property="lng" /><br />
