@@ -53,6 +53,8 @@ CREATE TABLE tx_buechertransport_domain_model_city (
 
 	name varchar(255) DEFAULT '' NOT NULL,
 	geocode varchar(255) DEFAULT '' NOT NULL,
+	lat varchar(255) DEFAULT '' NOT NULL,
+	lng varchar(255) DEFAULT '' NOT NULL,
 	libraries int(11) unsigned DEFAULT '0' NOT NULL,
 
 	tstamp int(11) unsigned DEFAULT '0' NOT NULL,
